[project]
name = "helo-world-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain-openrouter>=0.2.6",
    "langchain>=1.3.12",
    "python-dotenv>=1.2.2",
    "langsmith[claude-agent-sdk]>=0.10.0",
]
